@@ -1,3 +1,9 @@
+2003-10-05  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-command-history.c, cong-command.c, cong-command.h, cong-document.c
+
+	Implemented command merging
+
 2003-10-04  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-wrapper.c, cong-command.c, cong-command.h, cong-document.c, cong-document.h, cong-editor-node-text.c, cong-editor-widget3.c, cong-location.c, cong-menus.c, cong-node-properties-dialog.c, cursor.c, plugin-cleanup-source.c, popup.c, tree.c, xmledit.c
